// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";
package proto;

option go_package = "github.com/NubeIO/lib-module-go/proto";

message InitRequest {
  uint32 add_server = 1;
  string module_name = 2;
}

message Empty {}

message ConfigBody {
  bytes config = 1;
}

message RequestModule {
  string Method = 1;
  string UrlString = 2;
  bytes Body = 4;
}

message Request {
  string Method = 1;
  string Api = 2;
  string Args = 3;
  bytes Body = 4;
}

message Response {
  bytes r = 1;
  bytes e = 2;
}

message InfoResponse {
  string Name = 1;
  string Author = 2;
  string Website = 3;
  string License = 4;
  bool HasNetwork = 5;
}

service Module {
  rpc ValidateAndSetConfig(ConfigBody) returns (Response);
  rpc Init(InitRequest) returns (Empty);
  rpc Enable(Empty) returns (Empty);
  rpc Disable(Empty) returns (Empty);
  rpc GetInfo(Empty) returns (InfoResponse);
  rpc CallModule(RequestModule) returns (Response);
}

service DBHelper {
  rpc CallDBHelper(Request) returns (Response);
}
